--- a/package.json
+++ b/package.json
@@ -56,8 +56,11 @@
   "dependencies": {
     "axios": "^0.9.1",
     "classnames": "^2.2.3",
+    "immutable": "^3.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "immutable": "^3.8.1"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.7.0",
+    "redux": "^3.5.2"
   }
 }
