--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
-    "redux": "^3.5.2"
+    "reapp-ui": "^0.12.85",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   }
 }
