--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.7.2",
     "chai": "^3.5.0",
     "chai-immutable": "^1.6.0",
-    "mocha": "^3.0.2",
-    "babel-register": "^6.7.2",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.1.2",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
+    "mocha": "^3.0.2",
     "nib": "^1.1.0",
     "normalize-styl": "^3.0.3",
     "react-transform-catch-errors": "^1.0.2",
@@ -44,17 +45,15 @@
     "rupture": "^0.6.1",
     "style-loader": "^0.13.1",
     "stylus-loader": "^2.0.0",
+    "stylus-normalize": "^3.0.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0",
-    "yargs": "^4.6.0",
-    "json-loader": "^0.5.4",
-    "stylus-normalize": "^3.0.3"
+    "yargs": "^4.6.0"
   },
   "dependencies": {
-    "axios": "^0.9.1",
     "classnames": "^2.2.3",
     "immutable": "^3.8.1",
     "react": "^0.14.7",
@@ -63,6 +62,8 @@
     "react-router": "^2.7.0",
     "reapp-ui": "^0.12.85",
     "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0"
+    "redux-router": "^2.1.2",
+    "redux-thunk": "^2.1.0",
+    "superagent": "^2.2.0"
   }
 }
