--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "js-beautify": "^1.6.4",
     "json-loader": "^0.5.4",
     "mocha": "^3.0.2",
     "nib": "^1.1.0",
@@ -46,6 +47,7 @@
     "style-loader": "^0.13.1",
     "stylus-loader": "^2.0.0",
     "stylus-normalize": "^3.0.3",
+    "swig": "^1.4.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
@@ -55,6 +57,8 @@
   },
   "dependencies": {
     "classnames": "^2.2.3",
+    "googleapis": "^12.4.0",
+    "harvest": "^0.1.5",
     "immutable": "^3.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
